Hide language switcher on mobile because we no longer apply menu styles.
Which would make all the languages appear stretching down the page.

--- a/shared_web/static/css/pd.css
+++ b/shared_web/static/css/pd.css
@@ -853,6 +853,10 @@ Mobile Menu
 */
 
 @media only screen and (max-width: 640px) {
+    .language-switcher {
+        display: none;
+    }
+
     .submenu-container ul {
         margin-left: 1em;
     }
